JumpScript/tests/baselines/reference/unusedPrivateMethodInClass2.errors.txt
tests/cases/compiler/unusedPrivateMethodInClass2.jump(2,13): error TS6133: 'function1' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass2.jump(3,13): error TS6133: 'y' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass2.jump(7,13): error TS6133: 'function2' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass2.jump(8,13): error TS6133: 'y' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateMethodInClass2.jump (4 errors) ====
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
        }
    
        private function2() {
                ~~~~~~~~~
!!! error TS6133: 'function2' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
        }
    }